--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
+    "test": "jest",
+    "build": "webpack --mode=development",
     "start": "webpack serve --open"
   },
   "repository": {
@@ -20,13 +20,17 @@
   },
   "homepage": "https://github.com/ricardomonte/To-do#readme",
   "devDependencies": {
+    "@babel/core": "^7.13.1",
+    "@babel/preset-env": "^7.13.5",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.0.0",
+    "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.5",
     "node-sass": "^5.0.0",
     "sass-loader": "^11.0.0",
